--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     },
     "dependencies": {
         "bootstrap": "^5.3.3",
+        "cors": "^2.8.5",
+        "dotenv": "^16.4.7",
         "give-me-a-joke": "^0.5.1",
+        "mongoose": "^8.13.1",
         "react": "^19.0.0",
         "react-bootstrap": "^2.10.9",
         "react-dom": "^19.0.0",
