--- a/service/package.json
+++ b/service/package.json
@@ -8,11 +8,12 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "bcryptjs": "^3.0.2",
     "cookie-parser": "^1.4.7",
     "express": "^4.21.2",
+    "mongoose": "^8.13.1",
     "uuid": "^11.1.0"
-  }
+  },
+  "description": ""
 }
