--- a/service/package.json
+++ b/service/package.json
@@ -13,7 +13,8 @@
     "cookie-parser": "^1.4.7",
     "express": "^4.21.2",
     "mongoose": "^8.13.1",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "ws": "^8.18.1"
   },
   "description": ""
 }
